<resources>
    <string name="app_name">Waves</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Admin</string>

    <string name="nav_home">Home</string>
    <string name="nav_beaches">Beaches</string>
    <string name="nav_compare">Learn</string>
    <string name="navtitle_contact">Contact Us</string>
    <string name="nav_about">About</string>
    <string name="nav_contact">Contact</string>

    <string name="nav_header_subtitle">A Space Apps Challenge App</string>
    <string name="nav_header_description">This is the logo of our App</string>

    <string name="content_main_demo">Now What?</string>
    <string name="title_activity_maps_test">Map</string>

    <string name="image_description">Beach Photo</string>

    <string name="map_marker">Let\'s Go!</string>

    <string name="info_temperature">Temperature</string>
    <string name="info_wind">Wind</string>
    <string name="info_precipitation">Precipitation</string>
    <string name="info_humidity">Humidity</string>
    <string name="info_uv">UV Radiation</string>
    <string name="info_visibility">Visibility</string>
    <string name="info_sunrise">Sunrise</string>
    <string name="info_sunset">Sunset</string>

    <string name="info_comment1">Enjoy the Nice and Sunny Weather</string>
    <string name="info_comment2">There\'s a chance but don\'t worry</string>
    <string name="info_comment3">Remember to take a high SPF sunscreen</string>
    <string name="info_comment4">Avoid the sun from 10 am to 4 pm</string>

    <string name="data_sunrise">5:27 AM</string>
    <string name="data_sunset">5:59 PM</string>

    <string name="compare_1_title">Temperature</string>
    <string name="compare_1_content">UV radiations and temperature are not strictly correlated no matter how hot or cold the temperature is. There are differences in UV radiation levels in summer and winter, but it is mostly due to the distance and angle of the sun. UV levels generally peak at the middle of the day but temperature may still be rising to a maximum in the afternoon.</string>
    <string name="compare_1_content2">However there is still danger in being inside a high temperature area. Dehydration, exhaustion, rashes, low blood pressure and loss of consciousness are symptoms of severe exposure to high temperature environments. </string>

    <string name="compare_2_title">Wind</string>
    <string name="compare_2_content">Wind is tricky to assess regarding UV radiation. From a probabilistic standpoint a strong wind implies there is a pressure difference. If the air has more pressure then that means it is more dense, and UV rays are more likely to be intercepted.</string>

    <string name="compare_3_title">Humidity</string>
    <string name="compare_3_content">High humidity causes our bodies to be less efficient cooling down, since the air cannot take an extra amount of moisture, we sweat less. When sweating cannot do the job, our body overheats (known as heat exhaustion) and causes dehydration. The loss of vital bodily fluids fatigues us faster and causes our mental capabilities to decrease. </string>

    <string name="compare_4_title">UV Index Scale</string>
    <string name="compare_4_titleA">Level 0 &#8211; 2 Low </string>
    <string name="compare_4_contentA">Low danger from the sun\'s UV rays for the average person.
        Wear sunglasses on bright days.
        If you burn easily, cover up and use broad spectrum SPF 30+ sunscreen.
        Watch out for bright surfaces, like sand, water and snow, which reflect UV and increase exposure.</string>
    <string name="compare_4_titleB">Level 3 &#8211; 5 Moderate</string>
    <string name="compare_4_contentB">Moderate risk of harm from unprotected sun exposure.
        Stay in shade near midday when the sun is strongest.
        If outdoors, wear protective clothing, a wide-brimmed hat, and UV-blocking sunglasses.
        Generously apply broad spectrum SPF 30+ sunscreen every 2 hours, even on cloudy days, and after swimming or sweating.
        Watch out for bright surfaces, like sand, water and snow, which reflect UV and increase exposure.</string>
    <string name="compare_4_titleC">Level 6 &#8211; 7 High</string>
    <string name="compare_4_contentC">High risk of harm from unprotected sun exposure. Protection against skin and eye damage is needed.
        Reduce time in the sun between 10 a.m. and 4 p.m.
        If outdoors, seek shade and wear protective clothing, a wide-brimmed hat, and UV-blocking sunglasses.
        Generously apply broad spectrum SPF 30+ sunscreen every 2 hours, even on cloudy days, and after swimming or sweating.
        Watch out for bright surfaces, like sand, water and snow, which reflect UV and increase exposure.</string>
    <string name="compare_4_titleD">Level 8 &#8211; 10 Very High</string>
    <string name="compare_4_contentD">Very high risk of harm from unprotected sun exposure. Take extra precautions because unprotected skin and eyes will be damaged and can burn quickly.
        Minimize sun exposure between 10 a.m. and 4 p.m.
        If outdoors, seek shade and wear protective clothing, a wide-brimmed hat, and UV-blocking sunglasses.
        Generously apply broad spectrum SPF 30+ sunscreen every 2 hours, even on cloudy days, and after swimming or sweating.</string>

    <string name="home_titleA">Beach Report</string>
    <string name="home_subtitleA">Let\'s have some fun safely</string>

    <string name="about_titleA">Climate</string>
    <string name="about_contentA">All climate information available in this project was obtained through Open Weather API
UV Light, Visibility, Sunrise and Sunset was obtained through Yahoo Weather API.
</string>

    <string name="about_titleB">Map</string>
    <string name="about_contentB">All map information available in this project was obtained through Google Maps API. </string>

    <string name="about_titleC">Learn Content</string>
    <string name="about_contentC">All learn content available in this project was obtained through links from resources available on NASA Let\'s Go to the Beach landing page.</string>

    <string name="about_titleD">Pictures</string>
    <string name="about_contentD">All pictures available in this project were obtained through free sources from the beaches landing pages.
All icons available in this project were obtained from free flaticon or vecteezy icons.
</string>

    <string name="home_suggestions">Suggestions</string>
    <string name="home_suggestion1">Stay sober when swimming</string>
    <string name="home_suggestion2">Always use sunscreen</string>
    <string name="home_suggestion3">Be careful of ocean life</string>
    <string name="home_suggestion4">Stay hydrated and eat well</string>
    <string name="home_suggestion5">Be aware of the waves</string>
    <string name="home_suggestion6">Beware of the weather</string>
    <string name="home_suggestion7">Learn how to swim</string>
    <string name="home_suggestion8">Use shoes when the sand is too hot</string>
    <string name="home_suggestion9">Use hats and sunglasses</string>
    <string name="home_suggestion10">Never swim alone</string>
    <string name="home_suggestion11">Children are safer near coast guards</string>
    <string name="home_suggestion12">Avoid rip currents</string>

    <string name="contact_A">Victor Manuel Jarquin Slobodyanik</string>
    <string name="contact_A2">Chief Ejecutive Officer</string>
    <string name="contact_A3">Management</string>

    <string name="contact_B">Pedro Joaquin Navarrete Hurtado</string>
    <string name="contact_B2">Chief Tecnhology Officer</string>
    <string name="contact_B3">Lead Developer</string>

    <string name="contact_C">Carlos Eduardo Perez Villanueva</string>
    <string name="contact_C2">Chief Operating Officer</string>
    <string name="contact_C3">Developer</string>

    <string name="contact_D">Carlos Andreu Prendiz Guerrero</string>
    <string name="contact_D2">Chief Information Officer</string>
    <string name="contact_D3">Developer</string>

    <string name="contact_E">Saul Alexander Mojica Herrera</string>
    <string name="contact_E2">Chief Business Development Officer</string>
    <string name="contact_E3">Record Keeping, Financial Plan and Translator</string>

    <string name="contact_F">Camilo Mizael Sequeira Orozco</string>
    <string name="contact_F2">Chief Creative Officer</string>
    <string name="contact_F3">Lead Designer</string>

    <string name="contact_G">Annia Valeska Rivas Gonzales</string>
    <string name="contact_G2">Chief Communications Officer</string>
    <string name="contact_G3">Video Director, Editor and Publisher</string>

    <string name="contact_H">Darwin Jose Garcia</string>
    <string name="contact_H2">Chief Research Officer</string>
    <string name="contact_H3">Developer and Database Administrator</string>

    <string name="contact_titleA">Developers</string>
    <string name="contact_titleB">Support</string>

    <string name="notification">Test Earthquake Notification</string>
    <string name="notification2">Test Tsunami Notification</string>

    <string name="navbar_red_cross">Ambulance</string>
    <string name="navbar_fire">Firefighters</string>
    <string name="navbar_police">Police</string>


</resources>
