<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_beaches"
            android:icon="@drawable/ic_menu_beaches"
            android:title="@string/nav_beaches" />
        <item
            android:id="@+id/nav_compare"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_compare" />

    </group>

    <item android:title="@string/navtitle_contact">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/nav_about" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_contact" />
        </menu>
    </item>

</menu>
